--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="demo">
-			<the-parent></parent>
+			<the-parent></the-parent>
 			<!--<first-child></first-child>
 			<second-child :childmsg = "parentMsg"></second-child>-->
 		</div>
